styles/_homepage.scss
/******************************************************************************
 * App screenshot
*******************************************************************************/
.tech {
  display: flex;
  padding-bottom: 96px;

  @media (max-width: $width-tablet-1) {
    flex-wrap: wrap;
    padding-bottom: 64px;
  }

  &__image {
    max-width: 66.6666666667vw;

    @media (max-width: $width-tablet-1) {
      max-width: 100%;
      width: 100%;
    }
  }

  &__notes {
    max-width: 320px;
    padding-left: 16px;
    padding-top: 16px;

    @media (max-width: $width-tablet-1) {
      max-width: 100%;
      width: 100%;
      display: flex;
      flex-wrap: wrap;
      padding: 0;
    }

    @media (max-width: $width-mobile) {
      max-width: 320px;
      margin: 0 auto;
    }
  }

  &__note {
    margin-top: 16px;

    @media (max-width: $width-tablet-1) {
      width: 50%;
      margin: 0;
      padding: 32px 16px;
    }

    @media (max-width: $width-mobile) {
      text-align: center;
      width: 100%;
    }
  }
}

/******************************************************************************
 * Dilemma
*******************************************************************************/
.dilemma {
  text-align: center;

  &__subtext {
    margin-top: 16px;
    margin-bottom: 64px;
    
    > div {
      margin-left: auto;
      margin-right: auto;
    }
  }

  &__tables {
    display: flex;
    justify-content: center;
    
    @media (max-width: $width-tablet-2) {
      flex-wrap: wrap;
    }
  }

  &__table {
    width: 100%;
    max-width: 320px;
    margin: 0 16px;
    background-color: $white;
    border: 2px solid $charcoal;
    border-radius: 8px;
    padding: 16px 32px;

    @media (max-width: $width-tablet-1) {
      margin: 0 8px;
      padding: 16px;
    }

    @media (max-width: $width-tablet-2) {
      margin: 16px 0;
      max-width: 100%;
    }

    &--jambonz {
      border-width: 4px;
      border-color: $jambonz;
      background-color: $pink;
    }

    &__title {
      img {
        width: 50%;

        @media (max-width: $width-tablet-2) {
          width: 96px;
        }
      }
    }

    &__title,
    &__point {
      margin-bottom: 16px;
    }

    &__point {
      display: flex;
      align-items: flex-start;
      text-align: left;

      svg {
        width: 16px;
        height: 16px;
      }

      svg + div {
        width: calc(100% - 16px);
        margin-top: -6px;
        padding-left: 16px;
      }

      &.xcircle {
        svg {
          stroke: $red;
        }
      }

      &.checkcircle {
        svg {
          stroke: $green;
        }
      }
    }
  }
}

/******************************************************************************
 * BYO
*******************************************************************************/
.byo {
  text-align: center;

  &__subtext {
    margin-top: 16px;

    > div {
      @media (max-width: $width-mobile) {
        max-width: 320px;
        margin: 0 auto;
      }
    }
  }

  &__icons {
    margin: 64px 0;

    @media (max-width: $width-tablet-1) {
      margin: 48px 0;
    }
  }

  &__comment {
    > div {
      max-width: 800px;
      margin: 0 auto;
    }
  }

  &__cta {
    margin-top: 96px;

    @media (max-width: $width-tablet-1) {
      margin-top: 64px;
    }
  }
}

